deploy/050-InfluxDB/040-DeploymentConfig.yaml
kind: DeploymentConfig
apiVersion: v1
metadata:
 name: influxdb
 labels:
   app: influxdb
   deploymentconfig: influxdb
spec:
 replicas: 1
 selector:
   app: influxdb
   deploymentconfig: influxdb
 strategy:
   type: Recreate
   recreateParams:
     timeoutSeconds: 3600
 triggers:
   - type: ConfigChange
   - type: ImageChange
     imageChangeParams:
       automatic: true
       containerNames:
         - influxdb
       from:
         kind: ImageStreamTag
         name: influxdb:latest
 template:
   metadata:
     labels:
       app: influxdb
       deploymentconfig: influxdb
   spec:
     containers:
     - name: influxdb
       image: influxdb
       imagePullPolicy: Always
       args:
       - -config
       - /etc/config/influxdb.conf
       readinessProbe:
         initialDelaySeconds: 5
         periodSeconds: 5
         tcpSocket:
           port: 8086
         timeoutSeconds: 1
       livenessProbe:
         initialDelaySeconds: 20
         periodSeconds: 9
         tcpSocket:
           port: 8086
         timeoutSeconds: 1
       ports:
       - containerPort: 8086
         name: api
         protocol: TCP
       - containerPort: 8083
         name: admin
         protocol: TCP
       resources:
         limits:
           memory: 2Gi
       volumeMounts:
       - mountPath: /var/lib/influxdb
         name: influxdb-storage
       - mountPath: /etc/config
         name: conf
     volumes:
     - name: influxdb-storage
       persistentVolumeClaim:
         claimName: influxdb-pvc
     - name: conf
       configMap:
         name: influxdb-config
