deploy/050-InfluxDB/060-Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: influxdb
    deploymentconfig: influxdb
  name: influxdb
spec:
  port:
    targetPort: api
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: influxdb
